WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

TODO: option popup hook, make some exts switchable
TODO: constant offste with automove
TODO: rework colors and blabla section
TODO: hednod-tabs
TODO: forward keyevents to subtabs

	- changed interpretation of [alpha] colour prefix.
        - +option now really sets the option to default, instead of using the
          resource value.
        - options that require an argument now really _require_ an argument.
        - force refresh of XA_RESOURCE_STRING on virtual reconnect.
        - return exit status 2 in urxvtc when urxvtd couldn't be contacted.
        - the linux yield hack is back, now using usleep, and enabled only on
          __linux__.
        - further round trip eliminations in the !XFT case by remembering
          the colour components.
        - plain scrollbar works better with -sr.
        - fixed half-shadow scrollbar look.
        - more colour rtt optimisations.
        - properly(?) free colours on window close.
        - reorganised the FAQ into multiple sections.
        - forcing a configure event to tabbed subwindows with -pe tabbed, for
          the benefit of automove-background.
        - add ISO646.1991-IRV to the list of supported codesets.

7.5  Tue Jan 31 15:15:43 CET 2006
        - further improvements to the careful mode detection, and font width
          detection: 
          - fully double-wide fonts will now be correctly treated,
          - overlap detection was improved.
          - detect totally broken fonts (usually synthesized by xft).
          - careful mode forced refresh sometimes clashed with blinking,
            causing unnecessary screen redraws.
        - better handling of XFT combining characters.